[package]
name = "joplin"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.0.0"
arrow-arith = "53.0.0"
arrow-array = "53.0.0"
arrow-cast = "53.0.0"
arrow-data = "53.0.0"
arrow-ipc = "53.0.0"
arrow-ord = "53.0.0"
arrow-schema = "53.0.0"
async-trait = "0.1.82"
bytes = "1.7.1"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
chrono = "0.4.38"
datafusion = "41.0.0"
futures = "0.3.30"
hf-hub = "0.3.2"
http = "1.1.0"
lance = "0.17.0"
lance-encoding = "0.17.0"
lance-index = "0.17.0"
lance-linalg = "0.17.0"
lance-table = "0.17.0"
lance-testing = "0.17.0"
lancedb = "0.10.0"
log = "0.4.22"
num-traits = "0.2.19"
polars-arrow = "0.43.1"
regex = "1.10.6"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
serde_with = "3.9.0"
tokenizers = "0.20.0"
tokio = "1.40.0"
url = "2.5.2"
